Se añade descripcion al README y se cambia la estructura del Index.html

--- a/README
+++ b/README
@@ -6,3 +6,8 @@ Pudiendo pagar la comida.
 Teniendo una lista de toda la comida que se ha vendido y de la ganancia total.
 
 DESCRIPCION POR CLASES
+
+
+INTENCIONES
+Recordar mis bases de JS, HTML y CSS.
+Poder hacer mi primer proyecto para subirlo a Github.
